Changing filepaths for Ubuntu subsystem

--- a/src/illumioTest/config.properties
+++ b/src/illumioTest/config.properties
@@ -1,4 +1,4 @@
-lookupTablePath=D:\\pj\\illumio\\lookup-table.csv
-flowLogPath=D:\\pj\\illumio\\example-flow-logs.txt
-outputTagCountsFile=D:\\pj\\illumio\\tag_counts.csv
-outputPortProtocolFile=D:\\pj\\illumio\\port_protocol_counts.csv
+lookupTablePath=/home/krishna/AWS-Flowlogs-Parser/lookup-table.csv
+flowLogPath=/home/krishna/AWS-Flowlogs-Parser/example-flow-logs.txt
+outputTagCountsFile=/home/krishna/AWS-Flowlogs-Parser/tag-counts.csv
+outputPortProtocolFile=/home/krishna/AWS-Flowlogs-Parser/port_protocol_counts.csv
